--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,18 +53,99 @@ html {
 
 
 /*========== Variables Dark theme ==========*/
+body.dark-theme {
+  --title-color: #f2f2f2;
+  --text-color: #bfbfbf;
+  --container-color: #212121;
+  --container-color-alt: #181616;
+  --body-color: #2b2b2b;
+}
 
 
 /*========== Button Dark/Light ==========*/
-
+.change-theme {
+   position: absolute;
+   right: 1rem;
+   top: 2.4rem;
+   font-size: 2.2rem;
+   color: var(--text-color);
+   display: flex;
+   cursor: pointer;
+}
+.change-theme:hover {
+  color: var(--title-color);
+}
 
 /*========== Font size variables to scale cv ==========*/
-
+body.scale-cv {
+  --h1-font-size: 2rem; /* => 24px */
+  --h2-font-size: 1.7rem; /* => 20px */
+  --h3-font-size: 1.4rem; /* => 16px*/
+  --normal-font-size: 1.2rem ; /* => 15px */
+  --small-font-size: 1.1rem; /* => 14px */
+  --smaller-font-size: 1rem; /* => 13px */
+}
 
 /*========== Generate PDF button ==========*/
+.generate-pdf {
+  position: absolute;
+  top: 2.4rem;
+  left: 1rem;
+  font-size: 2.2rem;
+  color: var(--text-color);
+  cursor: pointer;
+}
+.generate-pdf:hover {
+  color: var(--title-color);
+}
 
+@media screen and (max-width: 768px) {
+
+  .generate-pdf {
+    display: none;
+  }
+}
 
 /*========== Classes modified to reduce size and print on A4 sheet ==========*/
+
+.scale-cv .change-theme,
+.scale-cv .generate-pdf {
+  display: none;
+}
+
+.scale-cv .at-container {
+  max-width: 670px;
+}
+.scale-cv .section {
+  padding: 1.6rem 1rem;
+}
+
+.scale-cv .home__container,
+.scale-cv .skills__container,
+.scale-cv .profile__container,
+.scale-cv .social__container,
+.scale-cv .projects__container,
+.scale-cv .education__container,
+.scale-cv .interests__container,
+.scale-cv .languages__container,
+.scale-cv .experience__container,
+.scale-cv .references__container {
+  grid-gap: .5rem;
+}
+
+.scale-cv .at-grid {
+  grid-gap: .3rem;
+}
+.scale-cv .resume {
+  grid-template-columns: 250px 1fr;
+}
+.scale-cv .resume__left,
+.scale-cv .resume__right {
+  padding: .2rem;
+}
+.scale-cv .references__content {
+  grid-template-columns: repeat(2, 1fr);
+}
 body {
   margin-top: var(--header-height);
   font-family: var(--body-font);
@@ -146,7 +227,15 @@ img {
   display: grid;
   grid-template-columns: 320px 1fr;
 }
+
+@media screen and (max-width: 768px) {
+
+  .resume {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+}
 .resume__left {
+  position: relative;
   padding: 1rem;
   background-color: var(--container-color-alt);
 }
@@ -249,6 +338,25 @@ img {
 .home__profession {
   font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
+  margin-bottom: var(--mb-2);
+}
+
+.home__button-download {
+  padding: 1.3rem 2.5rem;
+  color: var(--title-color);
+  border: 2px solid var(--text-color);
+  outline: none;
+  border-radius: 4px;
+  background-color: var(--body-font);
+  font-weight: var(--font-medium);
+  display: none;
+  
+}
+
+@media screen and (max-width: 669px) {
+  .home__button-download {
+    display: inline-block;
+  }
 }
 .home__address {
  
@@ -431,7 +539,7 @@ img {
   grid-gap: 1.2rem;
 }
 .references__content {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 .references__group {
   grid-gap: .5rem;
@@ -488,6 +596,30 @@ img {
   font-size: 2rem;
 }
 /* Scroll top */
+.scrolltop {
+  position: fixed;
+  bottom: -20%;
+  right: 1rem;
+  background-color: var(--container-color-alt);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 4px;
+  z-index: var(--z-tooltip);
+  transition: .4s;
+  visibility: hidden;
+
+}
+.scrolltop__icon {
+  color: var(--text-color);
+  font-size: 2rem;
+}
+
+.show-scroll {
+  visibility: visible;
+  bottom: 5rem;
+}
 
 
 /*========== MEDIA QUERIES ==========*/
